# ddrescue_error_mapping

./: Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md
package/DEBIAN/: control  postinst
src/: arguments.rs  config.rs  error.rs  lib.rs  main.rs  mount.rs  parser.rs  unmount.rs
tests/: test1.txt  test1output.txt  test2.txt  test2output.txt  test3.txt  test3output.txt  tests.rs
