[package]
name = "ddr-mount"
license = "AGPL-3.0-only"
version = "1.1.0"
edition = "2021"
authors = ["CKingX"]
description = "ddr-mount allows you to mount image files while passing bad sectors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
termcolor = "1.1.3"
clap = {version = "3.1.10", features = ["derive"] }
serde_json = "1.0.79"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
clap_complete = "3.1.3"
clap = {version = "3.1.10", features = ["derive"] }

[profile.release]
overflow-checks = true
lto = true