[package]
name = "ddr-mount"
license = "AGPL-3.0-only"
version = "1.1.4"
edition = "2021"
authors = ["CKingX"]
description = "ddr-mount allows you to mount image files while passing bad sectors"
homepage = "https://github.com/CKingX/ddrescue_error_mapping"
repository = "https://github.com/CKingX/ddrescue_error_mapping"
keywords = ["ddrescue", "image", "mount"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.*"
clap = {version = "3.1.10", features = ["derive"] }
serde_json = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.*"
env_logger = "0.9.*"
clap-verbosity-flag = "1.0.0"
unicode-width = "0.1.9"
update-informer = "0.5.0"
indexmap = {version = "1.8.1", features = ["serde"] }
sudo = "0.6.0"

[build-dependencies]
clap_complete = "3.1.3"
clap = {version = "3.1.10", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
clap_mangen = "0.1.6"

[profile.release]
overflow-checks = true
lto = "thin"